# build-loop

./: .gitignore  .mcp.json  .private-slugs.example  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN-ISSUES.md  LICENSE  NOTICE  README.md  REUSE.toml  conftest.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
.codex-plugin/: plugin.json
.episodic/: events.jsonl
.procedural/: _index.yaml
.rally/: .reconcile-cache.json  changes.jsonl  snapshot.cache.json
.semantic/: MEMORY.md  TAXONOMY.md  goal.md  intent.md
agents/: advisor.md  alignment-checker.md  api-assessor.md  architecture-scout.md  assessment-orchestrator.md  build-orchestrator.md  commit-auditor.md  database-assessor.md  design-contract-specialist.md  fact-checker.md  fix-critique.md  frontend-assessor.md  implementer.md  independent-auditor.md  leak-scanner.md  mock-scanner.md  optimize-runner.md  overfitting-reviewer.md  performance-assessor.md  plan-critic.md  promotion-reviewer.md  recurring-pattern-detector.md  retrospective-synthesizer.md  root-cause-investigator.md  scope-auditor.md  security-reviewer.md  self-improvement-architect.md  sonnet-critic.md  synthesis-critic.md  transcript-pattern-miner.md  ui-validator.md
architecture/: ARCHITECTURE.md  README.md  flow.yaml  model.json
archive/: ARCHIVE.md
commands/: agent-rally-point.md  assess.md  build-loop.md  build.md  compose-handoff.md  debug.md  debugger-detail.md  debugger-scan.md  debugger-status.md  debugger.md  drain-proposals.md  handoff.md  knowledge-review.md  optimize-run.md  optimize.md  plan-verify.md  promote-experiment.md  rally-point.md  research-run.md  research.md  run.md  self-review.md  setup-memory.md  start-prd.md  test.md  verify-plan.md
docs/: 01-simple-explanation.md  2026-06-14-session-what-was-built.md  DESIGN_2026-05-17_app-pulse-cross-session-live-architecture.md  F6-structural-closeout-gate.md  HANDOFF_2026-05-05_repo-episodic-memory.md  PLAN_2026-05-17_app-pulse.md  RECONCILIATION_2026-05-21_active-json-supersession.md  RETROSPECTIVE_2026-05-21_app-pulse-rally-point-coordination.md  SECURITY_FOLLOWUP_2026-05-05.md  SPEC-run-worktree-isolation.md  SYNTHESIS_DECISION_CORE_ASSUMPTIONS.md  SYNTHESIS_DECISION_EXPERIMENT_GUIDE.md  agent-surface-policy.md  assess-grounding-harness.md  audit-2026-04-22-doc-drift.md  audit-tests-duplication-2026-05-11.md  build-loop-flow-mockup.html  grounding-harness-disposition-2026-06-16.md  incident-2026-05-29-plugin-cache-gc.md  lessons-2026-05-30-plugin-review.md  lessons-2026-05-30-rally-point-cli-hardening.md  memory-setup.md  rca-assessment-and-plan-2026-06-14.md
hooks/: _arch_scan_bg.py  _plugin_drift_check_bg.py  _resolve_python.sh  _session_start_lib.sh  closeout.sh  hooks.json  post-commit  post-push-closeout.sh  pre-commit  pre-edit-apppulse.sh  pre-edit-architecture.sh  pre-edit-rally-point.sh  route-guard.sh  route_guard.py  session-start-apppulse.sh  session-start-architecture.sh  session-start-closeout.sh  session-start-extensions.sh  session-start-git-hooks.sh  session-start-memory.sh  session-start-plugin-drift.sh  session-start-plugin-heal.sh  session-start-rally-point.sh  session-start-retrieval.sh  session-start-worktree-gc.sh  test_apppulse_hooks.sh  test_closeout.sh  test_rally_point_hooks.sh  test_sec008_hooks.sh  test_session_start_rally_version.sh
launchd/: ai.rosslabs.proposal-drain.plist
references/: INDEX.md  app-pulse-protocol.md  auto-invoke-coordination.md  autonomy-config.md  backlog-system.md  capability-routing.md  coordination-file-template.md  coordination-rules.md  database-agent-constitution.md  decision-quality.md  do-branch-surface-policy.md  dogfood-reload-checkpoint.md  halt-and-ask-protocol.md  implementer-brief-template.md  implementer-envelope-schema.md  iterate-protocol.md  keep-going-policy.md  leadership.md  learn-protocol.md  m-series-protocol.md  memory-systems.md  methodology-core.md  model-taxonomy.json  model-tier-mapping.md  multi-session-coordination.md  npm-package-publishing.md  phase-3-execute.md  phase-4-review.md  phase-d-closeout.md  phase-gate-checklist.md  plan-template-ids.md  plugin-distribution.md  push-readiness-checklist.md  rally-point-protocol.md  research-trigger-policy.md  resume-protocol.md  runtime-smoke-triggers.md  scout-playbooks.md  single-writer-commit-protocol.md  task-capture-policy.md  (+3 more)
scripts/: README.md  _db_url.py  _paths.py  _test_helpers.py  acceptance_probe.py  agent_ledger.py  agent_rally.py  append_milestone.py  append_run.py  apple_sourcekit_triage.py  architecture_freshness.py  architecture_snapshot.py  archive_project_plan.py  artifact_guard.py  assess_grounding_score.py  atomic_io.py  (+430 more)
(+868 files in other folders)
